--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/BenChen0824/nodejs/issues"
   },
-  "homepage": "https://github.com/BenChen0824/nodejs#readme"
+  "homepage": "https://github.com/BenChen0824/nodejs#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "line-pay-merchant": "^0.9.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16"
+  }
 }
