--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BenChen0824/nodejs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "line-pay-merchant": "^0.9.0",
     "mysql2": "^2.3.3",
